# iridium-vm

./: Cargo.toml  LICENSE.md
.github/: dependabot.yml
assets/: simple_add.ir
src/: instruction.rs  main.rs  opcode.rs  vm.rs
src/assembler/: assembly_instruction.rs  mod.rs  parsers.rs  program.rs  symbols.rs  token.rs
src/repl/: mod.rs
