[package]
name = "iridium"
version = "0.0.1"
authors = ["Muhammad Umer Azad <umer@fastmail.com>"]
description = "Implementation of Iridium VM based on the work of fletcher@subnetzero.io. The purpose of this exercise is to learn Rust."
edition = "2018"
license = "MIT"


[dependencies]
structopt = "0.3.0"
ctrlc = "3.1.3"

[[bin]]
name = "iridium"

[dev-dependencies]
