[package]
name = "iridium"
version = "0.0.1"
authors = ["Muhammad Umer Azad <umer@fastmail.com>"]
description = "Implementation of Iridium VM based on the work of fletcher@subnetzero.io. The purpose of this exercise is to learn Rust."
edition = "2018"
license = "MIT"


[dependencies]
structopt = "0.3.5"
rustyline = "5.0.4"
nom = "5.0.1"
num-derive = "0.3"
num-traits = "0.2"
num = "0.2.0"
log = "0.4.8"
env_logger = "0.9.0"

[[bin]]
name = "iridium"

[dev-dependencies]
